# IOSH_AntOS

./: Cargo.toml  README.md
.cargo/: config.toml
configuration/specification/: README.md  x86_64-AntOS.json
src/: main.rs
src/vga/: mod.rs
src/vga/buffer/: color.rs  color_code.rs  mod.rs  screen_char.rs
src/vga/printer/: mod.rs  struct_printer.rs
