[package]
name = "ant_os"
version = "0.1.0"
edition = "2021"

[dependencies]
# Создаёт загрузочный образ на диске.
bootloader = "0.9.0"
# Гарантирует, что операции чтения/записи не будут оптимизированы.
volatile = "0.2.6"
# Возможность искпользовать ленивую подгрузку.
lazy_static = {version="1.4.0", features = ["spin_no_std"]}
# Добавляет Mutex
spin = "0.9.1"